fix the food vendor spacing issue

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -566,7 +566,7 @@ hr {
 			display: flex;
 			flex-direction: row;
 			flex-wrap: wrap;
-			justify-content: space-around;
+			justify-content: center;
 
 			@include desktop {
 			}
